--- a/module7/ecommerce-app/src/index.css
+++ b/module7/ecommerce-app/src/index.css
@@ -12,9 +12,31 @@ body
 .nav ul li 
 {
   display: inline-block;
-  padding: 5px 25px;
+  padding: 5px 10px;
 }
 .nav a 
 {
   color: white;
+}
+.carousel-item  
+{
+  width: 100%;
+  height: 400px;
+}
+.carousel-item  img 
+{
+  width: 100%;
+  height: 400px;
+}
+.sidebar li 
+{
+  display: block;
+  padding: 10px 2px;
+}
+.sidebar a 
+{
+  font-size: 20px;
+  text-decoration: none;
+  list-style-type: none;
+  color: black;
 }
